--- a/TM/qb_error.html
+++ b/TM/qb_error.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <title>Error Page</title>
 </head>
 <body>
+    <!-- Error Message -->
     <h1>The server was unable to load the question banks. Please wait a while and reload the page. If the problem persists contact Heidi</h1>
 </body>
 </html>
