--- a/TM/questions.html
+++ b/TM/questions.html
@@ -17,19 +17,35 @@
     <div class="horizontal-container">
       <div class="info-box">
         <p>Current Finished</p>
-        <p id="current-finished"></p>
+        <div class="scores">
+          <p id="current-finished"></p>
+          <p>/</p>
+          <p id="current-finished-out-of"></p>
+        </div>
       </div>
       <div class="info-box">
         <p>Current Marks</p>
-        <p id="current-marks"></p>
+        <div class="scores">
+          <p id="current-marks"></p>
+          <p>/</p>
+          <p id="current-marks-out-of"></p>
+        </div>
       </div>
       <div class="info-box">
         <p>Attempts</p>
-        <p id="attempts"></p>
+        <div class="scores">
+          <p id="attempts"></p>
+          <p>/</p>
+          <p>3</p>
+        </div>
       </div>
       <div class="info-box">
         <p>Marks</p>
-        <p id="marks"></p>
+        <div class="scores">
+          <p id="marks"></p>
+          <p>/</p>
+          <p>3</p>
+        </div>
       </div>
     </div>
 
