added student and expected output

--- a/TM/questions.html
+++ b/TM/questions.html
@@ -78,8 +78,8 @@
 
     <!-- Correct Answer -->
     <div id="answer-displayer">
-      <p id="submitted-answer"></p>
-      <p id="correct-answer"></p>
+      <p id="student-output"></p>
+      <p id="sample-output"></p>
     </div>
 
 
