added options for image processing

--- a/TM/questions.html
+++ b/TM/questions.html
@@ -79,7 +79,9 @@
     <!-- Correct Answer -->
     <div id="answer-displayer">
       <p id="student-output"></p>
+      <img id="student-output-image" src="">
       <p id="sample-output"></p>
+      <img id="sample-output-image" src="">
     </div>
 
 
